context menu on tab to hide container

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -15,7 +15,8 @@
 		"tabHide",
 		"<all_urls>",
 		"cookies",
-		"contextualIdentities"
+		"contextualIdentities",
+		"menus"
 	],
 	"incognito": "not_allowed",
 	"background": {
