--- a/src/manifest.json
+++ b/src/manifest.json
@@ -28,7 +28,7 @@
 		"default_icon": {
 			"16": "img/more_vert_black_24dp.svg"
 		},
-		"default_title": "Tabs",
+		"default_title": "__MSG_browserActionTitle__",
 		"default_popup": "popup/popup.html",
 		"default_area": "tabstrip",
 		"theme_icons": [
