--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,7 +17,10 @@
 		"<all_urls>",
 		"cookies",
 		"contextualIdentities",
-		"menus"
+		"menus",
+		"storage",
+		"browserSettings",
+		"privacy"
 	],
 	"incognito": "not_allowed",
 	"background": {
@@ -38,6 +41,11 @@
 				"dark": "img/more_vert_black_24dp.svg"
 			}
 		]
+	},
+	"options_ui": {
+		"page": "options/options.html",
+		"browser_style": true,
+		"open_in_tab": false
 	},
 	"icons": {
 		"48": "icon.svg",
