--- a/src/manifest.json
+++ b/src/manifest.json
@@ -20,7 +20,9 @@
 		"menus",
 		"storage",
 		"browserSettings",
-		"privacy"
+		"privacy",
+		"webRequest",
+		"webRequestBlocking"
 	],
 	"incognito": "not_allowed",
 	"background": {
@@ -50,5 +52,8 @@
 	"icons": {
 		"48": "icon.svg",
 		"96": "icon.svg"
-	}
+	},
+	"web_accessible_resources": [
+		"navigation/confirm.html"
+	]
 }
