--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^18.7.14",
     "@types/webextension-polyfill": "^0.9.0",
     "ts-loader": "^9.3.1",
+    "typedoc": "^0.23.14",
     "typescript": "^4.8.2",
     "web-ext": "^7.2.0",
     "webpack": "^5.74.0",
