--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "node clean.js ; webpack ; web-ext build --source-dir ./dist/ --artifacts-dir ./builds/ --overwrite-dest",
     "watch": "webpack -w",
     "clean": "node clean.js",
+    "typedoc": "typedoc --out ./docs/typedoc-frameworks ./src/frameworks/index.ts",
     "test": "node test.js"
   },
   "author": "Menhera.org",
