--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@types/webextension-polyfill": "^0.9.0",
     "ts-loader": "^9.3.1",
     "typedoc": "^0.23.14",
-    "typescript": "^4.8.2",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
+    "eslint": "^8.23.0",
+    "typescript": "<4.8.0",
     "web-ext": "^7.2.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
