move uninstall handler to install.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "noImplicitOverride": true,
     "moduleResolution": "node",
     "skipLibCheck": true,
-    "allowJs": true
+    "allowJs": true,
+    "checkJs": false
   },
   "include": [
     "src/**/*",
