--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   "devDependencies": {
     "@types/node": "^18.11.17",
     "@types/webextension-polyfill": "^0.9.2",
-    "ts-loader": "^9.4.2",
-    "typedoc": "^0.23.23",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "eslint": "^8.30.0",
+    "markdown-it": "^13.0.1",
+    "ts-loader": "^9.4.2",
+    "typedoc": "^0.23.23",
     "typescript": "<4.10.0",
     "web-ext": "^7.4.0",
     "webpack": "^5.75.0",
