--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "@types/diff": "^5.0.3",
     "diff": "^5.1.0",
     "webextension-polyfill": "^0.10.0",
     "xterm": "^5.1.0",
