--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@types/diff": "^5.0.3",
     "diff": "^5.1.0",
     "webextension-polyfill": "^0.10.0",
-    "xterm": "^5.1.0",
-    "xterm-addon-fit": "^0.7.0"
+    "weeg-domains": "^0.1.0"
   }
 }
