--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,9 @@
       "DOM.Iterable",
       "ES2021"
     ],
-    "module": "commonjs",
+    "module": "CommonJS",
     "sourceMap": true,
-    "declaration": false,
+    "declaration": true,
     "newLine": "lf",
     "outDir": "./ts-dist/",
     "esModuleInterop": true,
