--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "diff": "^5.1.0",
     "webextension-polyfill": "^0.10.0",
     "weeg-domains": "^0.3.0",
+    "weeg-events": "^0.3.0",
     "weeg-storage": "^0.4.0"
   }
 }
