--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webextension-polyfill": "^0.10.0",
     "weeg-domains": "^0.3.0",
     "weeg-events": "^0.3.0",
-    "weeg-storage": "^0.4.0"
+    "weeg-storage": "^0.4.0",
+    "weeg-tabs": "^0.6.0"
   }
 }
