--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "weeg-domains": "^0.3.0",
     "weeg-events": "^0.3.0",
     "weeg-storage": "^0.4.0",
-    "weeg-tabs": "^0.6.0"
+    "weeg-tabs": "^0.6.0",
+    "weeg-utils": "^0.6.0"
   }
 }
