--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Chrome-like tab groups using private and isolated containers: The ultimate tab manager and groups for Firefox.",
   "main": "./dist/index.js",
   "scripts": {
-    "build": "node script/clean.js ; eslint . ; webpack ; node script/build.js",
-    "dev": "node script/clean.js ; eslint . ; webpack --mode=development ; web-ext build --source-dir ./dist/ --artifacts-dir ./builds/ --overwrite-dest --filename container-tab-groups.dev.xpi",
+    "build": "node script/clean.js ; eslint . ; webpack ; node script/build-languages.js ; node script/build.js",
     "watch": "webpack -w",
     "clean": "node script/clean.js ; node script/clean-builds.js",
     "test": "node script/test.js"
