--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "typescript": "<5.1.0",
     "web-ext": "^7.6.0",
     "webpack": "^5.76.3",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-deadcode-plugin": "^0.1.17"
   },
   "dependencies": {
     "@types/diff": "^5.0.3",
