integrity checking feature

--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "license": "GPL-3.0-or-later",
   "devDependencies": {
     "@types/diff": "^5.0.3",
+    "@types/glob": "^8.1.0",
     "@types/node": "^18.16.3",
     "@types/webextension-polyfill": "^0.10.0",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "deterministic-zip-ng": "^2.0.0",
     "eslint": "^8.39.0",
+    "glob": "^10.2.2",
     "markdown-it": "^13.0.1",
     "ts-loader": "^9.4.2",
     "typedoc": "^0.24.6",
