--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@types/diff": "^5.0.3",
     "@types/glob": "^8.1.0",
     "@types/node": "^18.16.3",
+    "@types/react": "^18.2.5",
+    "@types/react-dom": "^18.2.3",
     "@types/webextension-polyfill": "^0.10.0",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
+    "copy-webpack-plugin": "^11.0.0",
     "deterministic-zip-ng": "^2.0.0",
     "eslint": "^8.39.0",
     "glob": "^10.2.2",
