--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^8.39.0",
     "glob": "^10.2.2",
     "markdown-it": "^13.0.1",
+    "terser-webpack-plugin": "^5.3.7",
     "ts-loader": "^9.4.2",
     "typedoc": "^0.24.6",
     "typescript": "<5.1.0",
