--- a/.parcelrc
+++ b/.parcelrc
@@ -2,8 +2,7 @@
   "extends": "@parcel/config-default",
   "resolvers": ["parcel-resolver-ignore", "..."],
   "transformers": {
-    "*.{ts,tsx}": ["@parcel/transformer-typescript-tsc"],
-    "*.{js}": ["@parcel/transformer-raw"],
-    "raw:*": ["@parcel/transformer-raw"]
-  }
+    "*.{ts,tsx}": ["@parcel/transformer-typescript-tsc"]
+  },
+  "reporters":  ["...", "parcel-reporter-static-files-copy"]
 }
