--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Chrome-like tab groups using private and isolated containers: The ultimate tab manager and groups for Firefox.",
   "main": "./dist/index.js",
   "scripts": {
-    "build": "node script/clean.js && eslint . && echo \"ESLint done\" && parcel build && node script/build.js",
+    "build": "node script/clean.js && rimraf .parcel-cache && eslint . && echo \"ESLint done\" && parcel build && node script/build.js",
     "clean": "node script/clean.js && node script/clean-builds.js",
     "test": "node script/test.js"
   },
@@ -20,7 +20,6 @@
     "@types/webextension-polyfill": "^0.10.0",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
-    "copy-webpack-plugin": "^11.0.0",
     "deterministic-zip-ng": "^2.0.0",
     "eslint": "^8.40.0",
     "glob": "^10.2.2",
@@ -28,14 +27,10 @@
     "parcel": "^2.8.3",
     "parcel-reporter-static-files-copy": "^1.5.0",
     "parcel-resolver-ignore": "^2.1.3",
-    "terser-webpack-plugin": "^5.3.8",
+    "rimraf": "^5.0.0",
     "ts-loader": "^9.4.2",
     "typedoc": "^0.24.7",
-    "typescript": "<5.1.0",
-    "web-ext": "^7.6.2",
-    "webpack": "^5.82.0",
-    "webpack-cli": "^5.1.0",
-    "webpack-deadcode-plugin": "^0.1.17"
+    "typescript": "<5.1.0"
   },
   "dependencies": {
     "diff": "^5.1.0",
