--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,15 @@ jobs:
       - add_ssh_keys:
           fingerprints:
             - "dc:28:3f:db:6c:1b:0e:c1:be:cf:0d:81:84:60:de:0d"
+      - run:
+          name: Clone repository
+          command: "GIT_SSH_COMMAND='ssh -i ~/.ssh/id_rsa_fingerprint' git clone git@github.com:menhera-org/ctg-releases.git ~/ctg-releases"
+      - run:
+          name: Copy artifacts
+          command: "mkdir -p ~/ctg-releases/build-metadata && cp build-metadata/*.json ~/ctg-releases/build-metadata/"
+      - run:
+          name: Commit artifacts and push to GitHub
+          command: "export GIT_SSH_COMMAND='ssh -i ~/.ssh/id_rsa_fingerprint'; ( cd ~/ctg-releases && git commit -am 'CircleCI updates' && git push )"
 
 workflows:
   # Below is the definition of your workflow.
