--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,13 +40,13 @@ jobs:
           command: "ls -l ~/.ssh/"
       - run:
           name: Clone repository
-          command: "GIT_SSH_COMMAND='ssh -i ~/.ssh/id_rsa_dc:28:3f:db:6c:1b:0e:c1:be:cf:0d:81:84:60:de:0d' git clone git@github.com:menhera-org/ctg-releases.git ~/ctg-releases"
+          command: "GIT_SSH_COMMAND='ssh -i ~/.ssh/id_rsa_dc283fdb6c1b0ec1becf0d818460de0d' git clone git@github.com:menhera-org/ctg-releases.git ~/ctg-releases"
       - run:
           name: Copy artifacts
           command: "mkdir -p ~/ctg-releases/build-metadata && cp build-metadata/*.json ~/ctg-releases/build-metadata/"
       - run:
           name: Commit artifacts and push to GitHub
-          command: "export GIT_SSH_COMMAND='ssh -i ~/.ssh/id_rsa_dc:28:3f:db:6c:1b:0e:c1:be:cf:0d:81:84:60:de:0d'; ( cd ~/ctg-releases && git add . && git commit -m 'CircleCI updates' && git push )"
+          command: "export GIT_SSH_COMMAND='ssh -i ~/.ssh/id_rsa_dc283fdb6c1b0ec1becf0d818460de0d'; ( cd ~/ctg-releases && git add . && git commit -m 'CircleCI updates' && git push )"
 
 workflows:
   # Below is the definition of your workflow.
