--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
           command: "ls -l ~/.ssh/"
       - run:
           name: Set SSH key for use with Git
-          command: "printf 'Host github.com\n  HostName github.com\n  IdentityFile ~/.ssh/id_rsa_dc283fdb6c1b0ec1becf0d818460de0d' >> ~/.ssh/config && chmod 600 ~/.ssh/config"
+          command: "printf 'Host github.com\n  HostName github.com\n  IdentityFile ~/.ssh/id_rsa_dc283fdb6c1b0ec1becf0d818460de0d' > ~/.ssh/config && chmod 600 ~/.ssh/config"
       - run:
           name: Clone repository
           command: "git clone git@github.com:menhera-org/ctg-releases.git ~/ctg-releases"
