--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
           command: "ls -l ~/.ssh/"
       - run:
           name: Set SSH key for use with Git
-          command: "mv ~/.ssh/id_rsa_dc283fdb6c1b0ec1becf0d818460de0d ~/.ssh/id_rsa && rm ~/.ssh/id_rsa.pub ~/.ssh/config"
+          command: "rm -f ~/.ssh/id_rsa.pub ~/.ssh/id_rsa ~/.ssh/config && git config --global core.sshCommand 'ssh -i ~/.ssh/id_rsa_dc283fdb6c1b0ec1becf0d818460de0d -F /dev/null'"
       - run:
           name: Clone repository
           command: "git clone git@github.com:menhera-org/ctg-releases.git ~/ctg-releases"
