--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,4 +33,4 @@ jobs:
       uses: actions/upload-artifact@v3.1.1
       with:
           name: built-xpi-unsigned
-          path: builds/ctg-*.xpi
+          path: builds/*/ctg-*.xpi
