--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Chrome-like tab groups using private and isolated containers: The ultimate tab manager and groups for Firefox.",
   "main": "./dist/index.js",
   "scripts": {
-    "build": "node script/clean.js && rimraf .parcel-cache && eslint . && echo \"ESLint done\" && parcel build && node script/build.js",
+    "build": "rimraf dist && rimraf .parcel-cache && eslint . && echo \"ESLint done\" && parcel build && node script/build.js",
     "clean": "node script/clean.js && node script/clean-builds.js",
     "test": "node script/test.js"
   },
