omit AMO html files from the repository

--- a/.gitignore
+++ b/.gitignore
@@ -105,6 +105,9 @@ builds
 build-metadata
 ctg-releases
 
+# markdown output
+docs/**/*.html
+
 # Gatsby files
 .cache/
 # Comment in the public line in if your project uses Gatsby and not Next.js
