update eslint/use module in package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "11.11.0",
   "description": "Chrome-like tab groups using private and isolated containers: The ultimate tab manager and groups for Firefox.",
   "main": "./scripts/index.js",
+  "type": "module",
   "scripts": {
     "build-scripts": "rimraf scripts && cd scripts-src && tsc && cd ..",
     "build": "npm run clean && npm run build-scripts && eslint . && echo \"ESLint done\" && parcel build && node scripts/build.js",
@@ -13,27 +14,28 @@
   "author": "Menhera.org",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
+    "@eslint/js": "^9.6.0",
     "@parcel/transformer-typescript-tsc": "^2.9.3",
     "@types/diff": "^5.0.8",
+    "@types/eslint__js": "^8.42.3",
     "@types/glob": "^8.1.0",
     "@types/markdown-it": "^13.0.5",
     "@types/node": "^20.10.0",
-    "@types/react-dom": "^18.2.15",
     "@types/react": "^18.2.53",
+    "@types/react-dom": "^18.2.15",
     "@types/webextension-polyfill": "^0.10.1",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.21.0",
     "addons-linter": "^6.23.0",
     "deterministic-zip-ng": "^2.1.1",
-    "eslint": "^8.54.0",
+    "eslint": "^8.57.0",
     "glob": "^10.3.3",
     "markdown-it": "^13.0.2",
+    "parcel": "^2.9.3",
     "parcel-reporter-static-files-copy": "^1.5.3",
     "parcel-resolver-ignore": "^2.2.0",
-    "parcel": "^2.9.3",
     "rimraf": "^5.0.5",
     "typedoc": "^0.25.7",
-    "typescript": "<5.4.0"
+    "typescript": "<5.4.0",
+    "typescript-eslint": "^7.16.0"
   },
   "dependencies": {
     "@menhera/deterministic-json": "^0.1.0",
