--- a/scripts-src/tsconfig.json
+++ b/scripts-src/tsconfig.json
@@ -7,7 +7,7 @@
     "types": [
       "node",
     ],
-    "module": "CommonJS",
+    "module": "es2020",
     "sourceMap": true,
     "declaration": true,
     "newLine": "lf",
