--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "@types/eslint__js": "^8.42.3",
     "@types/glob": "^8.1.0",
     "@types/markdown-it": "^14.1.2",
-    "@types/node": "^22",
+    "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/webextension-polyfill": "^0.12.1",
-    "addons-linter": "^7",
+    "addons-linter": "^8.1",
     "deterministic-zip-ng": "^2.1.1",
     "eslint": "^9",
     "glob": "^11.0.0",
@@ -34,13 +34,13 @@
     "parcel-resolver-ignore": "^2.2.0",
     "rimraf": "^6.0.1",
     "typedoc": "^0.28",
-    "typescript": "<5.8.0",
+    "typescript": "^5.9.3",
     "typescript-eslint": "^8"
   },
   "dependencies": {
     "@menhera/deterministic-json": "^0.1.0",
-    "@noble/curves": "^1.8",
-    "diff": "^7",
+    "@noble/curves": "^2",
+    "diff": "^8",
     "webextension-polyfill": "^0.12.0",
     "weeg-containers": "^0.12.0",
     "weeg-domains": "^0.10.0",
